# ephemeris

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
migrations/1_users/: up.sql
migrations/2_posts/: down.sql  up.sql
migrations/3_tokens/: down.sql  up.sql
migrations/4_comments/: down.sql  up.sql
src/: api_error.rs  lib.rs  main.rs  schema.rs
src/db/: connection.rs  mod.rs  paginate.rs
src/models/: comments.rs  mod.rs  posts.rs  users.rs
src/routes/: comments.rs  mod.rs  posts.rs  users.rs
