[package]
name = "ephemeris"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.2"
actix-rt = "2.7"
actix-cors = "0.6"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0"
r2d2 = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4"
rand = "0.8"
rust-argon2 = "1.0"
validator = { version = "0.16", features = ["derive"] }
